--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Shubham Jaiswal",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
